# polygon_assignment

./: .gitignore  CMakeLists.txt  README.md  foo.py  polygon.txt
src/: polygon_intersections.cpp
